--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,32 @@
 body {
   background-color: #FFE745;
+  font-family: "Arimo";
+  color: rgba(0, 0, 0, 0.83);
+  font-size: 16px;
+
+}
+a {
+  color: #e8ff6a;
+}
+h1 {
+  font-family: "Merriweather";
+  font-size: 2rem;
+  line-height: 100%;
+  color: rgba(0, 0, 0, 0.83);
+  font-weight: normal;
+  text-align: center;
+}
+span {
+  opacity: .6;
+  text-align: center;
+  display: inherit;
+  margin-top: -22px;
+}
+.main {
+  width: 100%;
+  height: 100%;
+}
+.center {
+  height: auto;
+  margin: 13% auto 0;
 }
